generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  uuid      String   @id @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")

  groups UserGroup[]
  roles  UserRole[]
  ownedGroups Group[]

  @@map("user")
}

model Group {
  name        String   @id
  description String?
  createdAt   DateTime @default(now()) @map("created_at")
  presidentUuid String @db.Uuid @map("president_uuid")

  president User @relation(fields: [presidentUuid], references: [uuid])

  users     UserGroup[]
  roles     Role[]
  userRoles UserRole[]

  @@map("group")
}

model UserGroup {
  userUuid  String   @map("user_uuid") @db.Uuid
  User      User     @relation(fields: [userUuid], references: [uuid])
  groupName String   @map("group_name")
  Group     Group    @relation(fields: [groupName], references: [name], onDelete: Cascade)
  createdAt DateTime @default(now()) @map("created_at")

  @@id([userUuid, groupName])
  @@map("user_group")
}

model Role {
  id                 Int
  name               String
  groupName          String     @map("group_name")
  Group              Group      @relation(fields: [groupName], references: [name], onDelete: Cascade)
  authorities         Authority[] @map("authorities")
  externalAuthorities String[]   @map("external_authorities")

  userRoles UserRole[]

  @@id([id, groupName])
  @@unique([name, groupName])
}

enum Authority {
  MEMBER_UPDATE
  MEMBER_DELETE
  ROLE_CREATE
  ROLE_UPDATE
  ROLE_DELETE
  GROUP_UPDATE
  GROUP_DELETE
}

model UserRole {
  userUuid  String @map("user_uuid") @db.Uuid
  User      User   @relation(fields: [userUuid], references: [uuid])
  groupName String @map("group_name")
  Group     Group  @relation(fields: [groupName], references: [name], onDelete: Cascade)
  roleId    Int    @map("role_id")
  Role      Role   @relation(fields: [roleId, groupName], references: [id, groupName], onDelete: Cascade)

  @@id([userUuid, groupName])
  @@map("user_role")
}
